chore: extract builders to test class